#683: Added Security Role mutations